tests/hm_typing/faulty_namespace_access_blob.sy
use faulty_namespace_access_blob

B :: 1

start :: fn do
    b: faulty_namespace_access_blob.B = 0
end

// error: Only enums and blobs can take type-arguments
